force-app/main/default/objects/Opportunity/fields/Fecha_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Disponible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fecha Disponible</label>
    <type>Checkbox</type>
</CustomField>