force-app/main/default/objects/Opportunity/fields/Llegada_en__c.field-meta.xml
<CustomField>
    <fullName>Llegada_en__c</fullName>
    <label>Llegada en</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Salida_Desde__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Provincia_Salida</valueSetName>
    </valueSet>
</CustomField>