force-app/main/default/objects/Opportunity/fields/Salida_Desde__c.field-meta.xml
<CustomField>
    <fullName>Salida_Desde__c</fullName>
    <label>Salida Desde</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincia_Salida</valueSetName>
    </valueSet>
</CustomField>