force-app/main/default/objects/Opportunity/fields/Tipo_de_Alquiler__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Alquiler__c</fullName>
    <label>Tipo de Alquiler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unico</fullName>
            </value>
            <value>
                <fullName>Mensual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>