force-app/main/default/objects/Opportunity/recordTypes/AlquilerDeVehiculos.recordType-meta.xml
<RecordType>
    <fullName>AlquilerDeVehiculos</fullName>
    <active>true</active>
    <businessProcess>Opp1</businessProcess>
    <label>AlquilerDeVehiculos</label>
</RecordType>