force-app/main/default/objects/Opportunity/recordTypes/Viaje_Individual.recordType-meta.xml
<RecordType>
    <fullName>Viaje_Individual</fullName>
    <active>true</active>
    <businessProcess>Opp1</businessProcess>
    <label>Viaje Individual</label>
</RecordType>