force-app/main/default/objects/Opportunity/validationRules/TipodeServicio2.validationRule-meta.xml
<ValidationRule>
    <fullName>TipodeServicio2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Servicio__c , &apos;Alquiler de Vehiculo&apos;) , ISBLANK( Transport__c  ) )</errorConditionFormula>
    <errorMessage>Debes seleccionar un transporte si es Alquiles de Vehiculo</errorMessage>
</ValidationRule>